traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/functions.rpy", line 87, in script
    mc "{cps=20}\"I [.....] my current academic performance. \"{/cps}"
  File "<none>", line 1
    .....
        ^
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/functions.rpy", line 87, in script
    mc "{cps=20}\"I [.....] my current academic performance. \"{/cps}"
  File "renpy/ast.py", line 2915, in execute
    Say.execute(self)
    ~~~~~~~~~~~^^^^^^
  File "renpy/ast.py", line 991, in execute
    renpy.exports.say(who, what, *args, **kwargs)
    ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/exports/sayexports.py", line 129, in say
    who(what, *args, **kwargs)
    ~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/character.py", line 1528, in __call__
    what = self.prefix_suffix("what", self.what_prefix, what, self.what_suffix)
           ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/character.py", line 1442, in prefix_suffix
    return sub(prefix) + sub(body, translate=not renpy.game.context().translated) + sub(suffix)
                         ~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^              
  File "renpy/character.py", line 1421, in sub
    return renpy.substitutions.substitute(s, scope=scope, force=force, translate=translate)[0]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   
  File "renpy/substitutions.py", line 355, in substitute
    s = interpolate(s, variables)  # type: ignore
        ~~~~~~~~~~~^^^^^^^^^^^^^^                
  File "renpy/substitutions.py", line 89, in interpolate
    raise e
  File "renpy/substitutions.py", line 81, in interpolate
    value = renpy.python.py_eval(code, {}, scope)
            ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1290, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1247, in py_compile
    raise e
  File "renpy/python.py", line 1177, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<none>", line 1
    .....
        ^
SyntaxError: invalid syntax

Windows-11-10.0.22631-SP0 AMD64
Ren'Py 8.4.1.25072401
Inkbound 1.0
Wed Sep 10 15:42:19 2025
